hphp/hack/test/typecheck/shape_idx4.php.like_types.exp
File "shape_idx4.php", line 7, characters 15-16:
Invalid argument (Typing[4110])
File "Shapes.hhi", line 34, characters 5-5:
Expected ~[unresolved] because it is an unenforceable type
File "shape_idx4.php", line 6, characters 15-17:
But got int
